Creacion de Banner Hero

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
             </ul>
         </header>
     </div>
+
+    <div class="container-fluid p-5 text-center hero-banner">
+        <h1 class="display-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1>
+        <p class="lead">Desarrollador Web Full Stack</p>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
